# morphvpn

./: .gitignore  Cargo.toml  LICENSE  README.md  README.ru.md  VERSIONS.md
.github/workflows/: ci.yml
deploy/: morphvpn.service  setup-client.sh  setup.sh
deploy/config/: acl.example.toml  client.toml  server.toml
docs/: AUDIT-REPORT.md  deploy.md  protocol.md
docs/compose/plans/: 2026-06-13-v0.2-production.md
docs/rfcs/: 0001-production-architecture.md
examples/: acl.example.toml
morphvpn-protocol/: Cargo.toml
morphvpn-protocol/src/: cookie.rs  crypto.rs  handshake.rs  lib.rs  pmtud.rs  replay.rs  session.rs  wire.rs
src/: acl.rs  cert.rs  config.rs  crypto.rs  health.rs  identity.rs  lib.rs  main.rs  metrics.rs  peer.rs  setup.rs  state_machine.rs  stealth.rs  sys_net.rs  transport.rs
src/runtime/: mod.rs  reactor.rs  shard.rs
tests/: cert_test.rs  config_test.rs  health_test.rs  integration.rs  metrics_test.rs  peer_test.rs  tcp_forwarding_test.rs  transport_test.rs
tests/common/: mod.rs
