[package]
name = "morphvpn-protocol"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
blake2 = "0.10"
bytes = "1"
chacha20 = "0.9"
chacha20poly1305 = { version = "0.10", features = ["std"] }
hkdf = "0.12"
hmac = "0.12"
rand = "0.8"
sha2 = "0.10"
snow = "0.10"
tracing = "0.1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = "1"
